// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sqle/Order/Detail render snap detail 1`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div>
        <div
          aria-busy="true"
          aria-live="polite"
          class="ant-spin ant-spin-spinning css-dev-only-do-not-override-txh9fw"
        >
          <span
            class="ant-spin-dot ant-spin-dot-spin"
          >
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
            <i
              class="ant-spin-dot-item"
            />
          </span>
        </div>
      </div>
      <div
        class="ant-spin-container ant-spin-blur"
      >
        <section
          class="css-1pyigne"
        >
          <section
            class="order-detail-content"
          >
            <div
              class="actiontech-page-header-namespace css-1xspr0w"
            >
              <div
                class="title"
              >
                <a
                  href="/sqle/project/700300/order"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span>
                      返回工单列表
                    </span>
                  </button>
                </a>
              </div>
              <div
                class="extra"
              >
                <div
                  class="css-eocfs5"
                >
                  <div
                    class="close-order-button-wrapper"
                    hidden=""
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        关闭工单
                      </span>
                    </button>
                    <div
                      class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical order-detail-page-header-divider"
                      role="separator"
                    />
                  </div>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      全部驳回
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      审核通过
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      批量立即上线
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      标记为人工上线
                    </span>
                  </button>
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    hidden=""
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 0px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          中止上线
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 0px;"
                    >
                      <div
                        class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical order-detail-page-header-divider"
                        role="separator"
                      />
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          刷新工单
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toggle-order-detail-wrapper"
                  >
                    工单详情
                  </div>
                </div>
              </div>
            </div>
            <div
              class="clearPaddingTop css-dk5j23"
            >
              <div
                class="order-base-info-title"
              />
              <div
                class="order-base-info-desc"
              >
                -
              </div>
            </div>
            <section
              class="css-1x8zeri"
            >
              <div
                class="audit-result-title"
              >
                审核结果
              </div>
              <div
                class="ant-row ant-row-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-segmented-group"
                  >
                    <label
                      class="ant-segmented-item ant-segmented-item-selected"
                    >
                      <input
                        checked=""
                        class="ant-segmented-item-input"
                        type="radio"
                      />
                      <div
                        class="ant-segmented-item-label"
                        title="概览"
                      >
                        概览
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-actions-wrap"
                  hidden=""
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                      style="padding: 0px 6px 0px 10px;"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 2px;"
                        >
                          筛选
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical audit-result-actions-divider"
                      role="separator"
                    />
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="css-rf9vxh"
                    >
                      数据去重
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          <span
                            class="custom-icon custom-icon-download css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M1.75 11.0833H12.25V12.25H1.75V11.0833ZM7.58333 7.68363L11.1247 4.14163L11.9496 4.96646L7 9.91663L2.05042 4.96704L2.87525 4.14163L6.41667 7.68246V1.16663H7.58333V7.68363Z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          下载
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          <span
                            class="custom-icon  css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                id="layout-bottom-2-line"
                              >
                                <path
                                  d="M12.2501 1.75C12.5723 1.75 12.8334 2.01117 12.8334 2.33333V11.6667C12.8334 11.9888 12.5723 12.25 12.2501 12.25H1.75008C1.42792 12.25 1.16675 11.9888 1.16675 11.6667V2.33333C1.16675 2.01117 1.42792 1.75 1.75008 1.75H12.2501ZM11.6667 2.91667H2.33341V11.0833H11.6667V2.91667ZM10.5001 8.75V9.91667H3.50008V8.75H10.5001Z"
                                  fill="#292C33"
                                  id="Vector"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          分页展示
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-555x9n css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup>
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col
                                style="width: 180px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  数据源
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  状态
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                  style="text-align: right;"
                                >
                                  审核通过率
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                  style="text-align: right;"
                                >
                                  审核结果评分
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  待操作人
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线人
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线开始时间
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线结束时间
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  定时上线时间
                                </th>
                                <th
                                  class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                  scope="col"
                                  style="position: sticky; right: 0px;"
                                >
                                  操作
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="10"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
          <div
            class="css-q2e51f"
            hidden=""
          >
            <div
              class="order-record-info-header"
            >
              <span
                class="order-record-info-header-text"
              >
                工单信息
              </span>
              <span
                class="custom-icon custom-icon-close css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="order-steps-basic-info"
            >
              <div
                class="order-steps-basic-info-title"
              >
                基本信息
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  创建人
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
                      style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
                    >
                      <span
                        class="ant-avatar-string"
                        style="line-height: 20px; transform: scale(1) translateX(-50%);"
                      >
                        -
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  创建时间
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9 16.5C4.85775 16.5 1.5 13.1423 1.5 9C1.5 4.85775 4.85775 1.5 9 1.5C13.1423 1.5 16.5 4.85775 16.5 9C16.5 13.1423 13.1423 16.5 9 16.5ZM9 15C10.5913 15 12.1174 14.3679 13.2426 13.2426C14.3679 12.1174 15 10.5913 15 9C15 7.4087 14.3679 5.88258 13.2426 4.75736C12.1174 3.63214 10.5913 3 9 3C7.4087 3 5.88258 3.63214 4.75736 4.75736C3.63214 5.88258 3 7.4087 3 9C3 10.5913 3.63214 12.1174 4.75736 13.2426C5.88258 14.3679 7.4087 15 9 15ZM9.75 9H12.75V10.5H8.25V5.25H9.75V9Z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  工单状态
                </div>
                <div
                  class="order-steps-basic-info-item-value"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="custom-steps-wrapper"
            >
              <div
                class="custom-steps-wrapper-title"
              >
                工单进度
              </div>
              <div
                class="ant-steps ant-steps-vertical css-1epey7k css-dev-only-do-not-override-txh9fw"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <section
          class="css-doq0dk"
          hidden=""
        >
          <div
            class="actiontech-page-header-namespace fixed-style css-1xspr0w"
          >
            <div
              class="title"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单详情
                </span>
              </button>
            </div>
            <div
              class="extra"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                hidden=""
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提交工单
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <form
            class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw hasTopHeader clearPaddingBottom css-19jfn7e"
          >
            <section
              class="has-border css-1114g56"
            >
              <section
                class="css-bspaai"
              >
                <h3
                  class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
                >
                  <span
                    class="custom-icon order-create-title-icon title-icon css-a29a66"
                  >
                    <svg
                      fill="currentColor"
                      height="28"
                      viewBox="0 0 24 28"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.33333V8.66666H20V3.33333H22.6755C23.4069 3.33333 24 3.9266 24 4.65786V26.0088C24 26.7403 23.4068 27.3333 22.6755 27.3333H1.32453C0.593013 27.3333 0 26.7401 0 26.0088V4.65786C0 3.92634 0.593267 3.33333 1.32453 3.33333H4ZM8 20.6667H5.33333V23.3333H8V20.6667ZM8 16.6667H5.33333V19.3333H8V16.6667ZM8 12.6667H5.33333V15.3333H8V12.6667ZM17.3333 0.666664V6H6.66667V0.666664H17.3333Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span>
                    修改审核语句
                  </span>
                </h3>
                <div
                  class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="0_sqlInputType"
                        title=""
                      />
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="css-8qroj2"
                          >
                            <div
                              class="update-type-item-wrapper css-16nz79o"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 7.5H3V14.25H15V7.5ZM2.25 2.25H15.75C16.1642 2.25 16.5 2.58579 16.5 3V15C16.5 15.4142 16.1642 15.75 15.75 15.75H2.25C1.83579 15.75 1.5 15.4142 1.5 15V3C1.5 2.58579 1.83579 2.25 2.25 2.25ZM3.75 4.5V6H5.25V4.5H3.75ZM6.75 4.5V6H8.25V4.5H6.75ZM3.75 8.25H6V12H3.75V8.25Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                输入SQL语句
                              </span>
                              <div
                                class="active-icon-wrapper"
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                            <div
                              class="update-type-item-wrapper css-1xajf28"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M12 1.5L15.75 5.25V15.756C15.7498 15.9534 15.6712 16.1426 15.5316 16.2821C15.392 16.4216 15.2026 16.5 15.0052 16.5H2.99475C2.79778 16.4986 2.60926 16.4198 2.46991 16.2806C2.33056 16.1414 2.25157 15.953 2.25 15.756V2.244C2.25 1.833 2.58375 1.5 2.99475 1.5H12ZM9.75 9H12L9 6L6 9H8.25V12H9.75V9Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                上传SQL文件
                              </span>
                              <div
                                class="active-icon-wrapper"
                                hidden=""
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                            <div
                              class="update-type-item-wrapper css-1xajf28"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M12 1.5L15.75 5.25V15.756C15.7498 15.9534 15.6712 16.1426 15.5316 16.2821C15.392 16.4216 15.2026 16.5 15.0052 16.5H2.99475C2.79778 16.4986 2.60926 16.4198 2.46991 16.2806C2.33056 16.1414 2.25157 15.953 2.25 15.756V2.244C2.25 1.833 2.58375 1.5 2.99475 1.5H12ZM9.75 9H12L9 6L6 9H8.25V12H9.75V9Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                上传ZIP文件
                              </span>
                              <div
                                class="active-icon-wrapper"
                                hidden=""
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required ant-form-item-no-colon"
                        for="0_sql"
                        title=""
                      />
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="custom-monaco-editor css-baixa9"
                            height="400px"
                            id="0_sql"
                            language="sql"
                            options="{\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                            value="/* input your sql */"
                            width="100%"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        审 核
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        SQL美化
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.99999 12.8333C3.77824 12.8333 1.16666 10.2217 1.16666 6.99996C1.16666 3.77821 3.77824 1.16663 6.99999 1.16663C10.2217 1.16663 12.8333 3.77821 12.8333 6.99996C12.8333 10.2217 10.2217 12.8333 6.99999 12.8333ZM6.99999 11.6666C8.23767 11.6666 9.42465 11.175 10.2998 10.2998C11.175 9.42462 11.6667 8.23764 11.6667 6.99996C11.6667 5.76228 11.175 4.5753 10.2998 3.70013C9.42465 2.82496 8.23767 2.33329 6.99999 2.33329C5.76231 2.33329 4.57533 2.82496 3.70016 3.70013C2.82499 4.5753 2.33332 5.76228 2.33332 6.99996C2.33332 8.23764 2.82499 9.42462 3.70016 10.2998C4.57533 11.175 5.76231 11.6666 6.99999 11.6666ZM6.41666 4.08329H7.58332V5.24996H6.41666V4.08329ZM6.41666 6.41663H7.58332V9.91663H6.41666V6.41663Z"
                            fill="#8A8F99"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </section>
          </form>
        </section>
      </div>
    </div>
  </div>
</body>
`;

exports[`sqle/Order/Detail render snap detail 2`] = `
<body>
  <div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <section
          class="css-1pyigne"
        >
          <section
            class="order-detail-content"
          >
            <div
              class="actiontech-page-header-namespace css-1xspr0w"
            >
              <div
                class="title"
              >
                <a
                  href="/sqle/project/700300/order"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        fill="none"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                    <span>
                      返回工单列表
                    </span>
                  </button>
                </a>
              </div>
              <div
                class="extra"
              >
                <div
                  class="css-eocfs5"
                >
                  <div
                    class="close-order-button-wrapper"
                    hidden=""
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        关闭工单
                      </span>
                    </button>
                    <div
                      class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical order-detail-page-header-divider"
                      role="separator"
                    />
                  </div>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      全部驳回
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      审核通过
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      批量立即上线
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    hidden=""
                    type="button"
                  >
                    <span>
                      标记为人工上线
                    </span>
                  </button>
                  <div
                    class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                    hidden=""
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 0px;"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-dangerous basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          中止上线
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                      style="margin-right: 0px;"
                    >
                      <div
                        class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical order-detail-page-header-divider"
                        role="separator"
                      />
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          刷新工单
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toggle-order-detail-wrapper"
                  >
                    工单详情
                  </div>
                </div>
              </div>
            </div>
            <div
              class="clearPaddingTop css-dk5j23"
            >
              <div
                class="order-base-info-title"
              />
              <div
                class="order-base-info-desc"
              >
                -
              </div>
            </div>
            <section
              class="css-1x8zeri"
            >
              <div
                class="audit-result-title"
              >
                审核结果
              </div>
              <div
                class="ant-row ant-row-space-between css-156vlto css-dev-only-do-not-override-txh9fw"
              >
                <div
                  class="ant-segmented basic-segmented-wrapper css-192b3m1 css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-segmented-group"
                  >
                    <label
                      class="ant-segmented-item ant-segmented-item-selected"
                    >
                      <input
                        checked=""
                        class="ant-segmented-item-input"
                        type="radio"
                      />
                      <div
                        class="ant-segmented-item-label"
                        title="概览"
                      >
                        概览
                      </div>
                    </label>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center audit-result-actions-wrap"
                  hidden=""
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars actiontech-filter-button-namespace basic-button-wrapper css-geipcv"
                      style="padding: 0px 6px 0px 10px;"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 2px;"
                        >
                          筛选
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="ant-divider css-dev-only-do-not-override-txh9fw ant-divider-vertical audit-result-actions-divider"
                      role="separator"
                    />
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <div
                      class="css-rf9vxh"
                    >
                      数据去重
                    </div>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 12px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm ant-btn-two-chinese-chars basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          <span
                            class="custom-icon custom-icon-download css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M1.75 11.0833H12.25V12.25H1.75V11.0833ZM7.58333 7.68363L11.1247 4.14163L11.9496 4.96646L7 9.91663L2.05042 4.96704L2.87525 4.14163L6.41667 7.68246V1.16663H7.58333V7.68363Z"
                              />
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          下载
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default ant-btn-sm basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <div
                        class="ant-space css-dev-only-do-not-override-674gwq ant-space-horizontal ant-space-align-center"
                      >
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          <span
                            class="custom-icon  css-u3jcp4"
                          >
                            <svg
                              fill="none"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                id="layout-bottom-2-line"
                              >
                                <path
                                  d="M12.2501 1.75C12.5723 1.75 12.8334 2.01117 12.8334 2.33333V11.6667C12.8334 11.9888 12.5723 12.25 12.2501 12.25H1.75008C1.42792 12.25 1.16675 11.9888 1.16675 11.6667V2.33333C1.16675 2.01117 1.42792 1.75 1.75008 1.75H12.2501ZM11.6667 2.91667H2.33341V11.0833H11.6667V2.91667ZM10.5001 8.75V9.91667H3.50008V8.75H10.5001Z"
                                  fill="#292C33"
                                  id="Vector"
                                />
                              </g>
                            </svg>
                          </span>
                        </div>
                        <div
                          class="ant-space-item"
                          style="margin-right: 5px;"
                        >
                          分页展示
                        </div>
                        <div
                          class="ant-space-item"
                        >
                          <span
                            class="custom-icon custom-icon-arrow-down css-u3jcp4"
                            role="img"
                          >
                            <svg
                              fill="currentColor"
                              height="14"
                              viewBox="0 0 14 14"
                              width="14"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M6.99999 7.68364L9.88749 4.79614L10.7123 5.62098L6.99999 9.33331L3.28766 5.62098L4.11249 4.79614L6.99999 7.68364Z"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="ant-table-wrapper actiontech-table-namespace table-row-cursor css-555x9n css-dev-only-do-not-override-bj9uhl"
              >
                <div
                  class="ant-spin-nested-loading css-dev-only-do-not-override-bj9uhl"
                >
                  <div
                    class="ant-spin-container"
                  >
                    <div
                      class="ant-table ant-table-empty ant-table-fixed-column ant-table-scroll-horizontal ant-table-has-fix-right"
                    >
                      <div
                        class="ant-table-container"
                      >
                        <div
                          class="ant-table-content"
                          style="overflow-x: auto; overflow-y: hidden;"
                        >
                          <table
                            style="min-width: 100%; table-layout: auto;"
                          >
                            <colgroup>
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col />
                              <col
                                style="width: 180px;"
                              />
                            </colgroup>
                            <thead
                              class="ant-table-thead"
                            >
                              <tr>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  数据源
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  状态
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                  style="text-align: right;"
                                >
                                  审核通过率
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                  style="text-align: right;"
                                >
                                  审核结果评分
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  待操作人
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线人
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线开始时间
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  上线结束时间
                                </th>
                                <th
                                  class="ant-table-cell"
                                  scope="col"
                                >
                                  定时上线时间
                                </th>
                                <th
                                  class="ant-table-cell actiontech-table-actions-column ant-table-cell-fix-right ant-table-cell-fix-right-first"
                                  scope="col"
                                  style="position: sticky; right: 0px;"
                                >
                                  操作
                                </th>
                              </tr>
                            </thead>
                            <tbody
                              class="ant-table-tbody"
                            >
                              <tr
                                aria-hidden="true"
                                class="ant-table-measure-row"
                                style="height: 0px; font-size: 0px;"
                              >
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                                <td
                                  style="padding: 0px; border: 0px; height: 0px;"
                                >
                                  <div
                                    style="height: 0px; overflow: hidden;"
                                  >
                                     
                                  </div>
                                </td>
                              </tr>
                              <tr
                                class="ant-table-placeholder"
                              >
                                <td
                                  class="ant-table-cell"
                                  colspan="10"
                                >
                                  <div
                                    class="ant-table-expanded-row-fixed"
                                    style="width: 0px; position: sticky; left: 0px; overflow: hidden;"
                                  />
                                </td>
                              </tr>
                            </tbody>
                          </table>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </section>
          </section>
          <div
            class="css-q2e51f"
            hidden=""
          >
            <div
              class="order-record-info-header"
            >
              <span
                class="order-record-info-header-text"
              >
                工单信息
              </span>
              <span
                class="custom-icon custom-icon-close css-u3jcp4"
                role="img"
              >
                <svg
                  fill="currentColor"
                  height="14"
                  viewBox="0 0 14 14"
                  width="14"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6.99993 6.17522L9.88743 3.28772L10.7123 4.11255L7.82476 7.00005L10.7123 9.88755L9.88743 10.7124L6.99993 7.82489L4.11243 10.7124L3.2876 9.88755L6.1751 7.00005L3.2876 4.11255L4.11243 3.28772L6.99993 6.17522Z"
                  />
                </svg>
              </span>
            </div>
            <div
              class="order-steps-basic-info"
            >
              <div
                class="order-steps-basic-info-title"
              >
                基本信息
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  创建人
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="ant-avatar ant-avatar-circle action-avatar css-1wq79dc css-dev-only-do-not-override-txh9fw"
                      style="width: 20px; height: 20px; line-height: 20px; font-size: 18px;"
                    >
                      <span
                        class="ant-avatar-string"
                        style="line-height: 20px; transform: scale(1) translateX(-50%);"
                      >
                        -
                      </span>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  创建时间
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center order-steps-basic-info-item-value"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span
                      class="custom-icon css-u3jcp4"
                    >
                      <svg
                        fill="none"
                        height="18"
                        viewBox="0 0 18 18"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M9 16.5C4.85775 16.5 1.5 13.1423 1.5 9C1.5 4.85775 4.85775 1.5 9 1.5C13.1423 1.5 16.5 4.85775 16.5 9C16.5 13.1423 13.1423 16.5 9 16.5ZM9 15C10.5913 15 12.1174 14.3679 13.2426 13.2426C14.3679 12.1174 15 10.5913 15 9C15 7.4087 14.3679 5.88258 13.2426 4.75736C12.1174 3.63214 10.5913 3 9 3C7.4087 3 5.88258 3.63214 4.75736 4.75736C3.63214 5.88258 3 7.4087 3 9C3 10.5913 3.63214 12.1174 4.75736 13.2426C5.88258 14.3679 7.4087 15 9 15ZM9.75 9H12.75V10.5H8.25V5.25H9.75V9Z"
                          fill="#8A8F99"
                        />
                      </svg>
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="order-steps-basic-info-item"
              >
                <div
                  class="order-steps-basic-info-item-label"
                >
                  工单状态
                </div>
                <div
                  class="order-steps-basic-info-item-value"
                >
                  -
                </div>
              </div>
            </div>
            <div
              class="custom-steps-wrapper"
            >
              <div
                class="custom-steps-wrapper-title"
              >
                工单进度
              </div>
              <div
                class="ant-steps ant-steps-vertical css-1epey7k css-dev-only-do-not-override-txh9fw"
              />
            </div>
          </div>
        </section>
      </div>
    </div>
    <div
      class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
    >
      <div
        class="ant-spin-container"
      >
        <section
          class="css-doq0dk"
          hidden=""
        >
          <div
            class="actiontech-page-header-namespace fixed-style css-1xspr0w"
          >
            <div
              class="title"
            >
              <button
                class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                type="button"
              >
                <span
                  class="ant-btn-icon"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.21863 7.33333H13.3333V8.66667H5.21863L8.79463 12.2427L7.85196 13.1853L2.66663 8L7.85196 2.81467L8.79463 3.75733L5.21863 7.33333Z"
                      fill="currentColor"
                    />
                  </svg>
                </span>
                <span>
                  返回工单详情
                </span>
              </button>
            </div>
            <div
              class="extra"
            >
              <div
                class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                hidden=""
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                    type="button"
                  >
                    <span>
                      提交工单
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <form
            class="ant-form ant-form-vertical css-dev-only-do-not-override-txh9fw hasTopHeader clearPaddingBottom css-19jfn7e"
          >
            <section
              class="has-border css-1114g56"
            >
              <section
                class="css-bspaai"
              >
                <h3
                  class="ant-typography css-y0jsrg css-dev-only-do-not-override-txh9fw"
                >
                  <span
                    class="custom-icon order-create-title-icon title-icon css-a29a66"
                  >
                    <svg
                      fill="currentColor"
                      height="28"
                      viewBox="0 0 24 28"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M4 3.33333V8.66666H20V3.33333H22.6755C23.4069 3.33333 24 3.9266 24 4.65786V26.0088C24 26.7403 23.4068 27.3333 22.6755 27.3333H1.32453C0.593013 27.3333 0 26.7401 0 26.0088V4.65786C0 3.92634 0.593267 3.33333 1.32453 3.33333H4ZM8 20.6667H5.33333V23.3333H8V20.6667ZM8 16.6667H5.33333V19.3333H8V16.6667ZM8 12.6667H5.33333V15.3333H8V12.6667ZM17.3333 0.666664V6H6.66667V0.666664H17.3333Z"
                        fill="currentColor"
                      />
                    </svg>
                  </span>
                  <span>
                    修改审核语句
                  </span>
                </h3>
                <div
                  class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-no-colon"
                        for="0_sqlInputType"
                        title=""
                      />
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <div
                            class="css-8qroj2"
                          >
                            <div
                              class="update-type-item-wrapper css-16nz79o"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M15 7.5H3V14.25H15V7.5ZM2.25 2.25H15.75C16.1642 2.25 16.5 2.58579 16.5 3V15C16.5 15.4142 16.1642 15.75 15.75 15.75H2.25C1.83579 15.75 1.5 15.4142 1.5 15V3C1.5 2.58579 1.83579 2.25 2.25 2.25ZM3.75 4.5V6H5.25V4.5H3.75ZM6.75 4.5V6H8.25V4.5H6.75ZM3.75 8.25H6V12H3.75V8.25Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                输入SQL语句
                              </span>
                              <div
                                class="active-icon-wrapper"
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                            <div
                              class="update-type-item-wrapper css-1xajf28"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M12 1.5L15.75 5.25V15.756C15.7498 15.9534 15.6712 16.1426 15.5316 16.2821C15.392 16.4216 15.2026 16.5 15.0052 16.5H2.99475C2.79778 16.4986 2.60926 16.4198 2.46991 16.2806C2.33056 16.1414 2.25157 15.953 2.25 15.756V2.244C2.25 1.833 2.58375 1.5 2.99475 1.5H12ZM9.75 9H12L9 6L6 9H8.25V12H9.75V9Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                上传SQL文件
                              </span>
                              <div
                                class="active-icon-wrapper"
                                hidden=""
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                            <div
                              class="update-type-item-wrapper css-1xajf28"
                            >
                              <span
                                class="custom-icon  css-u3jcp4"
                              >
                                <svg
                                  fill="currentColor"
                                  height="18"
                                  viewBox="0 0 18 18"
                                  width="18"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M12 1.5L15.75 5.25V15.756C15.7498 15.9534 15.6712 16.1426 15.5316 16.2821C15.392 16.4216 15.2026 16.5 15.0052 16.5H2.99475C2.79778 16.4986 2.60926 16.4198 2.46991 16.2806C2.33056 16.1414 2.25157 15.953 2.25 15.756V2.244C2.25 1.833 2.58375 1.5 2.99475 1.5H12ZM9.75 9H12L9 6L6 9H8.25V12H9.75V9Z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                              <span
                                class="text"
                              >
                                上传ZIP文件
                              </span>
                              <div
                                class="active-icon-wrapper"
                                hidden=""
                              >
                                <span
                                  class="icon-order-upload-checked active-icon css-u3jcp4"
                                >
                                  <svg
                                    fill="none"
                                    height="14"
                                    viewBox="0 0 14 14"
                                    width="14"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <g
                                      id="Frame"
                                    >
                                      <path
                                        d="M3.88879 7.00002L6.22213 9.33335L10.8888 4.66669"
                                        id="Vector"
                                        stroke="#FCFBF9"
                                        stroke-linejoin="round"
                                        stroke-width="1.5"
                                      />
                                    </g>
                                  </svg>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-form-item css-15d6abf css-dev-only-do-not-override-txh9fw"
                >
                  <div
                    class="ant-row ant-form-item-row css-dev-only-do-not-override-txh9fw"
                  >
                    <div
                      class="ant-col ant-form-item-label ant-form-item-label-left css-dev-only-do-not-override-txh9fw"
                    >
                      <label
                        class="ant-form-item-required ant-form-item-no-colon"
                        for="0_sql"
                        title=""
                      />
                    </div>
                    <div
                      class="ant-col ant-form-item-control css-dev-only-do-not-override-txh9fw"
                    >
                      <div
                        class="ant-form-item-control-input"
                      >
                        <div
                          class="ant-form-item-control-input-content"
                        >
                          <input
                            aria-required="true"
                            class="custom-monaco-editor css-baixa9"
                            height="400px"
                            id="0_sql"
                            language="sql"
                            options="{\\"automaticLayout\\":true,\\"minimap\\":{\\"enabled\\":false},\\"fontFamily\\":\\"SF Mono\\",\\"fontSize\\":14,\\"fontWeight\\":\\"400\\",\\"lineNumbersMinChars\\":2,\\"suggestFontSize\\":14}"
                            value="/* input your sql */"
                            width="100%"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-primary basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        审 核
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <button
                      class="ant-btn css-dev-only-do-not-override-674gwq ant-btn-default basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span>
                        SQL美化
                      </span>
                    </button>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <div
                      class="ant-space css-dev-only-do-not-override-txh9fw ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                      >
                        <svg
                          fill="none"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.99999 12.8333C3.77824 12.8333 1.16666 10.2217 1.16666 6.99996C1.16666 3.77821 3.77824 1.16663 6.99999 1.16663C10.2217 1.16663 12.8333 3.77821 12.8333 6.99996C12.8333 10.2217 10.2217 12.8333 6.99999 12.8333ZM6.99999 11.6666C8.23767 11.6666 9.42465 11.175 10.2998 10.2998C11.175 9.42462 11.6667 8.23764 11.6667 6.99996C11.6667 5.76228 11.175 4.5753 10.2998 3.70013C9.42465 2.82496 8.23767 2.33329 6.99999 2.33329C5.76231 2.33329 4.57533 2.82496 3.70016 3.70013C2.82499 4.5753 2.33332 5.76228 2.33332 6.99996C2.33332 8.23764 2.82499 9.42462 3.70016 10.2998C4.57533 11.175 5.76231 11.6666 6.99999 11.6666ZM6.41666 4.08329H7.58332V5.24996H6.41666V4.08329ZM6.41666 6.41663H7.58332V9.91663H6.41666V6.41663Z"
                            fill="#8A8F99"
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
              </section>
            </section>
          </form>
        </section>
      </div>
    </div>
  </div>
</body>
`;
